feat: add creators/updaters, update translationValue
