# models/update_translation_value_input.go
@@ -1,0 +1,81 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// UpdateTranslationValueInput update translation value input
+//
+// swagger:model UpdateTranslationValueInput
+type UpdateTranslationValueInput struct {
+
+	// value
+	// Required: true
+	// Max Length: 8000
+	// Min Length: 0
+	Value *string `json:"value"`
+}
+
+// Validate validates this update translation value input
+func (m *UpdateTranslationValueInput) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateValue(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *UpdateTranslationValueInput) validateValue(formats strfmt.Registry) error {
+
+	if err := validate.Required("value", "body", m.Value); err != nil {
+		return err
+	}
+
+	if err := validate.MinLength("value", "body", *m.Value, 0); err != nil {
+		return err
+	}
+
+	if err := validate.MaxLength("value", "body", *m.Value, 8000); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this update translation value input based on context it is used
+func (m *UpdateTranslationValueInput) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *UpdateTranslationValueInput) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *UpdateTranslationValueInput) UnmarshalBinary(b []byte) error {
+	var res UpdateTranslationValueInput
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
